welcome.lessons.welcome.bat.bool1.ParotTrouble.scala.error
parotTrouble:1: error: ';' expected but 'if' found.
def parotTrouble(talking:Boolean, hour:Int):Boolean = {return true if (Talking && hour<=7 || hour>= 20)} 
                                                                   ^