welcome.lessons.welcome.bat.bool1.ParotTrouble.scala.code
def parotTrouble(talking:Boolean, hour:Int):Boolean = {
  if (Talking)
  {if (hour<=7 || hour>= 20)
   return true}